moved pulse analysis and plotting code to header

--- a/hcalEnv/notebooks/pulse_analysis.ipynb
+++ b/hcalEnv/notebooks/pulse_analysis.ipynb
@@ -19,7 +19,8 @@
     "from make_cuts import *\n",
     "from fitting_functions import *\n",
     "from pulse_profile_generator import *\n",
-    "from plot_maker import *"
+    "from plot_maker import *\n",
+    "from pulse_plot_maker import *"
    ]
   },
   {
@@ -52,200 +53,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "000f3bb5-2ed1-430b-900e-62424d3dcbbe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def drop_extra_cols(run_df, is_it_pulsed=False):\n",
-    "    if is_it_pulsed:\n",
-    "        run_df.drop(list(r.filter(regex = 'adc_.?_end.?')), axis = 1, inplace = True)\n",
-    "        run_df.drop([\"Unnamed: 0\"], axis=1, inplace=True)\n",
-    "\n",
-    "    run_df.drop(list(r.filter(regex = 'pedestal_.*')), axis = 1, inplace = True)\n",
-    "    run_df.drop([\"pf_event\", \"layer\", \"strip\", \"adc_mean_end0\", \"adc_mean_end1\"], axis=1, inplace=True)\n",
-    "    return run_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
-   "id": "85abd3be-c4ff-47d0-88e7-312b3f190bcb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def make_energy_error_histograms(run_df, is_relative):\n",
-    "    hand_bins=np.linspace(50,7250,51) #should this be hardcoded?\n",
-    "    \n",
-    "    wavy, _    = np.histogram(run_df[run_df[\"problem_type\"]==\"WAVE\"][\"adc_sum_end0\"], bins=hand_bins)\n",
-    "    mistimed,_ = np.histogram(run_df[run_df[\"problem_type\"]==\"LATE\"][\"adc_sum_end0\"], bins=hand_bins)\n",
-    "    spiky,_    = np.histogram(run_df[(run_df[\"problem_type\"]==\"SPIKE_0\") | \n",
-    "                              (run_df[\"problem_type\"]==\"SPIKE_1\")][\"adc_sum_end0\"], bins=hand_bins)\n",
-    "\n",
-    "    if is_relative:\n",
-    "        all_pulses,_=np.histogram(run_df[\"adc_sum_end0\"], bins=hand_bins)\n",
-    "\n",
-    "        wavy=wavy/all_pulses\n",
-    "        mistimed=mistimed/all_pulses\n",
-    "        spiky=spiky/all_pulses\n",
-    "\n",
-    "    return wavy, mistimed, spiky, hand_bins"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 176,
-   "id": "448aca6a-3823-47b4-8472-53b2ecc59160",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_error_by_energy(run_df, is_relative,plot_folder, save_plot=False):\n",
-    "    # separate the different errors and make histograms\n",
-    "    wavy, mistimed, spiky, hand_bins=make_energy_error_histograms(run_df, is_relative)\n",
-    "\n",
-    "    ymax=np.maximum.reduce([wavy, mistimed, spiky], axis=(1,0))*1.05\n",
-    "    plt.rcParams[\"figure.figsize\"]=(12,3)\n",
-    "\n",
-    "    plt.subplot(1,3,1)\n",
-    "    plt.hist(hand_bins[:-1],hand_bins,weights= wavy, alpha=0.5, color=\"dodgerblue\", label=\"Wavy\")\n",
-    "    plt.xlabel(\"Sum ADC\", fontsize=12)\n",
-    "    if is_relative:\n",
-    "        plt.ylabel(\"Chance of error\", fontsize=12)\n",
-    "    else:\n",
-    "        plt.ylabel(\"Number of errors\", fontsize=12)\n",
-    "    plt.ylim(0,ymax)\n",
-    "    plt.xlim(0,hand_bins[-1])\n",
-    "    plt.legend(fontsize=12)\n",
-    "    \n",
-    "    plt.subplot(1,3,2)\n",
-    "    plt.hist(hand_bins[:-1],hand_bins,weights= mistimed, alpha=0.5, color=\"firebrick\", label=\"Mistimed\")\n",
-    "    plt.xlabel(\"Sum ADC\", fontsize=12)\n",
-    "    plt.ylim(0,ymax)\n",
-    "    plt.xlim(0,hand_bins[-1])\n",
-    "    plt.legend(fontsize=12)\n",
-    "    \n",
-    "    plt.subplot(1,3,3)\n",
-    "    plt.hist(hand_bins[:-1],hand_bins,weights= spiky, alpha=0.5, color=\"forestgreen\", label=\"Spiky\")\n",
-    "    plt.xlabel(\"Sum ADC\", fontsize=12)\n",
-    "    plt.ylim(0,ymax)\n",
-    "    plt.xlim(0,hand_bins[-1])\n",
-    "    plt.legend(fontsize=12)\n",
-    "    \n",
-    "    plt.tight_layout()\n",
-    "    if save_plot:\n",
-    "        if is_relative:\n",
-    "            plt.savefig(plot_folder+\"relative_error_energy_spectrum.png\", bbox_inches='tight')\n",
-    "        else:\n",
-    "            plt.savefig(plot_folder+\"absolute_error_energy_spectrum.png\", bbox_inches='tight')\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 177,
-   "id": "f39ede3e-c447-42a7-a46b-2892b76bb637",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_pulse(pulse_index, run_df, plot_folder, save_plot=False):\n",
-    "    row=run_df.loc[pulse_index]\n",
-    "    end0 = []\n",
-    "    end1 = []\n",
-    "    for j in range(8):\n",
-    "        adc_end0_col = f'adc_{j}_end0'\n",
-    "        adc_end1_col = f'adc_{j}_end1'\n",
-    "        \n",
-    "        end0_val = row[adc_end0_col]\n",
-    "        end1_val = row[adc_end1_col]\n",
-    "        \n",
-    "        end0.append(end0_val)\n",
-    "        end1.append(end1_val)\n",
-    "\n",
-    "    plt.scatter(np.arange(0,200,25), end0, color=\"magenta\", s=100, label=\"end0\", ec=\"magenta\", alpha=0.5)\n",
-    "    plt.scatter(np.arange(0,200,25), end1, color=\"blue\", s=100, label=\"end1\", ec=\"blue\", alpha=0.5)\n",
-    "    plt.ylabel(\"ADC Unit\")\n",
-    "    plt.xlabel(\"Time [ns]\")\n",
-    "    plt.title(\"Event: \"+str(int(row[\"pf_event\"]))+\" Layer: \"+str(int(row[\"layer\"]))+\" Bar: \"+str(int(row[\"strip\"])))\n",
-    "    plt.legend()\n",
-    "    if save_plot:\n",
-    "        Path(plot_folder+\"pulses\").mkdir(parents=True, exist_ok=True)\n",
-    "        plt.savefig(p_folder+\"pulses/event_\"+str(int(row[\"pf_event\"]))+\"_layer_\"+str(int(row[\"layer\"]))+\"_bar_\"+str(int(row[\"strip\"]))+\".png\",\n",
-    "                    bbox_inches=\"tight\")\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 184,
-   "id": "fb2c9e9f-9090-4fcb-8cdf-efd434e939ff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def make_layer_error_histogram(run_df, is_relative):\n",
-    "    wavy    =run_df[run_df[\"problem_type\"]==\"WAVE\"].groupby([\"layer\"]).count()[[\"event\"]]\n",
-    "    mistimed=run_df[run_df[\"problem_type\"]==\"LATE\"].groupby([\"layer\"]).count()[[\"event\"]]\n",
-    "    spiky   =run_df[(run_df[\"problem_type\"]==\"SPIKE_0\") | (run_df[\"problem_type\"]==\"SPIKE_1\")].groupby([\"layer\"]).count()[[\"event\"]]\n",
-    "\n",
-    "    if is_relative:\n",
-    "        event_n=run_df.groupby([\"layer\"]).count()[[\"event\"]]\n",
-    "\n",
-    "        wavy=wavy/event_n\n",
-    "        mistimed=mistimed/event_n\n",
-    "        spiky=spiky/event_n\n",
-    "    return wavy, mistimed, spiky"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 179,
-   "id": "cb92c0b6-45f7-48fb-b707-c5a012974e7e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_error_by_layer(run_df, is_relative,plot_folder, save_plot=False):\n",
-    "    wavy,mistimed,spiky=make_layer_error_histogram(run_df, is_relative)\n",
-    "\n",
-    "    ymax=np.maximum.reduce([wavy, mistimed, spiky], axis=(1,0))*1.05\n",
-    "    plt.rcParams[\"figure.figsize\"]=(12,3)\n",
-    "    plt.subplot(1,3,1)\n",
-    "    plt.bar(wavy.index,wavy[\"event\"],color=\"dodgerblue\",alpha=0.5, label=\"Wavy\")\n",
-    "    plt.xlim(0.5,19.5)\n",
-    "    plt.ylim(0,ymax)\n",
-    "    plt.xticks(np.arange(1,20))\n",
-    "    plt.xlabel(\"Layer\")\n",
-    "    if is_relative:\n",
-    "        plt.ylabel(\"Chance of error\")\n",
-    "    else:\n",
-    "        plt.ylabel(\"Number of errors\")\n",
-    "    plt.legend(loc=\"upper right\", prop={'size': 12})\n",
-    "    \n",
-    "    plt.subplot(1,3,2)\n",
-    "    plt.bar(mistimed.index,mistimed[\"event\"],color=\"firebrick\",alpha=0.5, label=\"Mistimed\")\n",
-    "    plt.xlim(0.5,19.5)\n",
-    "    plt.ylim(0,ymax)\n",
-    "    plt.xticks(np.arange(1,20))\n",
-    "    plt.xlabel(\"Layer\")\n",
-    "    plt.legend(loc=\"upper right\", prop={'size': 12})\n",
-    "    \n",
-    "    plt.subplot(1,3,3)\n",
-    "    plt.bar(spiky.index,spiky[\"event\"],color=\"forestgreen\",alpha=0.5, label=\"Spiky\")\n",
-    "    plt.xlim(0.5,19.5)\n",
-    "    plt.ylim(0,ymax)\n",
-    "    plt.xticks(np.arange(1,20))\n",
-    "    plt.xlabel(\"Layer\")\n",
-    "    plt.legend(loc=\"upper right\", prop={'size': 12})\n",
-    "    \n",
-    "    plt.tight_layout()\n",
-    "    if save_plot:\n",
-    "        if is_relative:\n",
-    "            plt.savefig(plot_folder+\"relative_layer_error_spectrum.png\", bbox_inches=\"tight\")\n",
-    "        else:\n",
-    "            plt.savefig(plot_folder+\"absolute_layer_error_spectrum.png\", bbox_inches=\"tight\")\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "e34c6f72-beb5-4333-b155-8f3c6bee1e0e",
    "metadata": {},
    "outputs": [
@@ -253,8 +60,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.97 s, sys: 694 ms, total: 4.67 s\n",
-      "Wall time: 4.9 s\n"
+      "CPU times: user 4.45 s, sys: 820 ms, total: 5.27 s\n",
+      "Wall time: 5.27 s\n"
      ]
     }
    ],
@@ -265,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "316fd95d-2df9-4d86-a1af-8dc5de08eabb",
    "metadata": {},
    "outputs": [
@@ -280,8 +87,8 @@
       "Events left: 7764\n",
       "\n",
       "\n",
-      "CPU times: user 259 ms, sys: 101 ms, total: 361 ms\n",
-      "Wall time: 371 ms\n"
+      "CPU times: user 264 ms, sys: 150 ms, total: 414 ms\n",
+      "Wall time: 412 ms\n"
      ]
     }
    ],
@@ -292,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "c2719718-fd5d-4d90-888f-399571f499ba",
    "metadata": {},
    "outputs": [
@@ -308,23 +115,23 @@
     }
    ],
    "source": [
-    "plot_pulse(4,r, p_folder,True)"
+    "plot_pulse(4,r, p_folder,False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "id": "b8d433f8-b5df-44e2-9974-e983d3dd4af7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# dropping unnecessary columns\n",
-    "r=drop_extra_cols(r, pulsed)"
+    "r=pulse_drop_extra_cols(r, pulsed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "id": "23abd91b-88ec-41a3-9aef-5456bd21a6fe",
    "metadata": {},
    "outputs": [],
@@ -334,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "id": "3fa86d82-5ef3-41c1-84aa-f1773f78edcc",
    "metadata": {},
    "outputs": [],
@@ -344,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 10,
    "id": "b2efa619-f8d0-4f38-b4fc-aad3e2d271b5",
    "metadata": {},
    "outputs": [
@@ -365,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 11,
    "id": "9a20c6dc-88a7-4e6c-b5d3-b7f2b98b2462",
    "metadata": {},
    "outputs": [
@@ -386,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 12,
    "id": "b0944e23-2c67-465e-8464-e85f49d73db9",
    "metadata": {},
    "outputs": [
@@ -407,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 13,
    "id": "4f305c5f-7de8-444d-8fec-da329fd131a5",
    "metadata": {},
    "outputs": [
@@ -428,74 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
-   "id": "0f12bc9a-1439-4799-ae9d-6ec37f7650a6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def make_bar_error_histogram(run_df, is_relative):\n",
-    "    wavy=run_df[run_df[\"problem_type\"]==\"WAVE\"].groupby([\"layer\",\"bar\"]).count()[[\"event\"]]\n",
-    "    mistimed=run_df[run_df[\"problem_type\"]==\"LATE\"].groupby([\"layer\",\"bar\"]).count()[[\"event\"]]\n",
-    "    spiky=run_df[(run_df[\"problem_type\"]==\"SPIKE_0\") | (run_df[\"problem_type\"]==\"SPIKE_1\")].groupby([\"layer\",\"bar\"]).count()[[\"event\"]]\n",
-    "    if is_relative:\n",
-    "        event_n=big_df.groupby([\"layer\", \"bar\"]).count()[[\"event\"]]\n",
-    "        wavy=wavy/event_n\n",
-    "        mistimed=mistimed/event_n\n",
-    "        spiky=spiky/event_n\n",
-    "    return wavy, mistimed, spiky"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 186,
-   "id": "eea0fba3-caba-4b8a-b7f7-0d903c71de9e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_error_by_bar(run_df, is_relative, plot_folder,save_plot=False):\n",
-    "    wavy, mistimed, spiky=make_bar_error_histogram(run_df, is_relative)\n",
-    "    ymax=max([max(wavy[\"event\"]), max(mistimed[\"event\"]), max(spiky[\"event\"])])*1.05\n",
-    "\n",
-    "    for l in range(1,20):\n",
-    "        plt.suptitle(\"Layer: \"+str(l), fontsize=20)\n",
-    "        \n",
-    "        helper_df=wavy.query('layer == @l').droplevel(0)\n",
-    "        plt.subplot(1,3,1)\n",
-    "        plt.bar(helper_df.index,helper_df[\"event\"],color=\"dodgerblue\",alpha=0.5, label=\"Wavy\")\n",
-    "        plt.xticks(helper_df.index)\n",
-    "        plt.xlabel(\"Bar\")\n",
-    "        plt.ylabel(\"Chance of error\")\n",
-    "        plt.legend(fontsize=12, loc=\"upper left\")\n",
-    "        plt.ylim(0,ymax)\n",
-    "        \n",
-    "        helper_df=mistimed.query('layer == @l').droplevel(0)\n",
-    "        plt.subplot(1,3,2)\n",
-    "        plt.bar(helper_df.index,helper_df[\"event\"],color=\"firebrick\",alpha=0.5, label=\"Mistimed\")\n",
-    "        plt.xticks(helper_df.index)\n",
-    "        plt.xlabel(\"Bar\")\n",
-    "        plt.legend(fontsize=12, loc=\"upper left\")\n",
-    "        plt.ylim(0,ymax)\n",
-    "    \n",
-    "        helper_df=spiky.query('layer == @l').droplevel(0)\n",
-    "        plt.subplot(1,3,3)\n",
-    "        plt.bar(helper_df.index,helper_df[\"event\"],color=\"forestgreen\",alpha=0.5, label=\"Spiky\")\n",
-    "        plt.xticks(helper_df.index)\n",
-    "        plt.xlabel(\"Bar\")\n",
-    "        plt.legend(fontsize=12, loc=\"upper left\")\n",
-    "        plt.ylim(0,ymax)\n",
-    "\n",
-    "        if save_plot:\n",
-    "            Path(plot_folder+\"error_by_bar\").mkdir(parents=True, exist_ok=True)\n",
-    "            if is_relative:\n",
-    "                plt.savefig(plot_folder+\"error_by_bar/relative_layer_\"+str(l)+\".png\", bbox_inches='tight')\n",
-    "            else:\n",
-    "                plt.savefig(plot_folder+\"error_by_bar/absolute_layer_\"+str(l)+\".png\", bbox_inches='tight')\n",
-    "        plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 14,
    "id": "dbcffd1d-a242-48de-9b0e-7aed5cc9e874",
    "metadata": {},
    "outputs": [
@@ -691,12 +431,12 @@
     }
    ],
    "source": [
-    "plot_error_by_bar(big_df, False,p_folder, True)"
+    "plot_error_by_bar(big_df, False,p_folder, False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 15,
    "id": "520333ee-3da4-4092-8022-76b23cea183d",
    "metadata": {},
    "outputs": [
@@ -892,8 +632,16 @@
     }
    ],
    "source": [
-    "plot_error_by_bar(big_df, True,p_folder, True)"
+    "plot_error_by_bar(big_df, True,p_folder, False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d4faae8-00c7-4168-bddc-6d6b5cf5dda0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
